<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>cloud.multimicro.mmc</groupId>
    <artifactId>Booking</artifactId>
    <version>1.0.0</version>
    <packaging>war</packaging>
    <name>Booking</name>
    <properties>
        <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <webXmlPath>src/main/webapp/WEB-INF/web.develop.xml</webXmlPath>
    </properties>
    <profiles>
        <profile>
            <id>develop</id>
            <properties>
              <webXmlPath>src/main/webapp/WEB-INF/web.develop.xml</webXmlPath>
            </properties>
        </profile>
        <profile>
            <id>preprod</id>
            <properties>
              <webXmlPath>src/main/webapp/WEB-INF/web.pre.prod.xml</webXmlPath>
            </properties>
        </profile>
        <profile>
          <id>prod-a</id>
          <properties>
            <webXmlPath>src/main/webapp/WEB-INF/web.prod.a.xml</webXmlPath>
          </properties>
        </profile>
        <profile>
          <id>prod-b</id>
          <properties>
            <webXmlPath>src/main/webapp/WEB-INF/web.prod.b.xml</webXmlPath>
          </properties>
        </profile>  
    </profiles>
     
    <dependencies>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.5</version>
            <type>jar</type>
        </dependency>
        <dependency>
        <groupId>javax</groupId>
        <artifactId>javaee-api</artifactId>
        <version>8.0.1</version>
      </dependency>        
        <dependency>
            <groupId>javax</groupId>
            <artifactId>javaee-endorsed-api</artifactId>
            <version>7.0</version>
        </dependency>
        <dependency>
            <groupId>javax</groupId>
            <artifactId>javaee-web-api</artifactId>
            <version>7.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.5</version>
        </dependency>
        <dependency>
          <groupId>org.jboss.logging</groupId>
          <artifactId>jboss-logging</artifactId>
          <version>3.4.1.Final</version>
          <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.resteasy</groupId>
            <artifactId>resteasy-client</artifactId>
            <version>3.0.14.Final</version>
            <type>jar</type>
        </dependency>  
        <dependency>
          <groupId>io.jsonwebtoken</groupId>
          <artifactId>jjwt</artifactId>
          <version>0.9.1</version>
        </dependency>
        <dependency>
            <groupId>com.stripe</groupId>
            <artifactId>stripe-java</artifactId>
            <version>20.111.0</version>
            <type>jar</type>
        </dependency>              
    </dependencies>

  <build>
    <finalName>BookingEngine</finalName>
    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
      <plugins>
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging -->
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.0</version>
          <configuration>
              <release>11</release>
          </configuration>          
         </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-war-plugin</artifactId>
          <version>3.2.2</version>
          <configuration>
            <failOnMissingWebXml>true</failOnMissingWebXml>
            <webXml>${webXmlPath}</webXml>
          </configuration>
         </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
        <plugin>
          <groupId>org.wildfly.plugins</groupId>
          <artifactId>wildfly-maven-plugin</artifactId>
            <version>2.0.2.Final</version>
            <configuration>
                <protocol>${wildfly-protocol}</protocol>
                <hostname>${wildfly-hostname}</hostname>
                <username>${wildfly-username}</username>
                <password>${wildfly-password}</password>
                <port>${wildfly-port}</port>
            </configuration>
        </plugin>   
        <!--For checkstyle reporting generation-->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.9.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>   
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-checkstyle-plugin</artifactId>
          <version>3.1.2</version>
          <dependencies>
            <dependency>
              <groupId>com.puppycrawl.tools</groupId>
              <artifactId>checkstyle</artifactId>
              <version>9.2</version>
            </dependency>
          </dependencies>
        </plugin>
        <plugin>  
          <groupId>org.sonarsource.scanner.maven</groupId>
          <artifactId>sonar-maven-plugin</artifactId>
          <version>3.9.1.2184</version>
        </plugin>           
      </plugins>
    </pluginManagement>
  </build>
  <reporting>
      <plugins>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-checkstyle-plugin</artifactId>
              <version>3.1.1</version>
              <configuration>
                  <configLocation>sun_checks.xml</configLocation>
              </configuration>
          </plugin>
      </plugins>
  </reporting>
</project>
